//Version : 2014/11/12/22:29
package common.message;

message DataPacket {

    enum DataPacketType{
        DeviceInfo = 1;
        Video = 2;
        Audio = 3;
        Command = 4;
        FileRequest = 5;
        FileInfo = 6;
        FileBlock = 7;
        SharedMessage = 8;
        KeyboardEvent = 9;
        CloudStorageTokenRequest = 10;
        CloudStorageToken = 11;
        Unspecified = 12;
    }

    required uint64 unixTimeStamp = 1;
    required DataPacketType dataPacketType = 2;

    optional DeviceInfo deviceInfo = 3;
    optional Video video = 4;
    optional Audio audio = 5;
    optional Command command = 6;
    optional FileRequest fileRequest = 7;
    optional FileInfo fileInfo = 8;
    optional FileBlock fileBlock = 9;
    optional SharedMessage sharedMessage = 10;
    optional KeyboardEvent keyboardEvent = 11;
    optional CloudStorageTokenRequest cloudStorageTokenRequest = 12;
    optional CloudStorageToken cloudStorageToken = 13;
}

message Command {
    enum CommandType {
        Minimize = 1;
        ShowDesktop = 2;
        ShutDownApp = 3;
        LeftClick = 4;
        RightClick = 5;
        Scroll = 6;
        SelectWindow = 7;
        StopAudioTransmission = 8;
        StopVideoTransmission = 9;
        StopAudioAndVideoTransmission = 10;
        StartAudioTransmission = 11;
        StartVideoTransmission = 12;
        FindMyDevice = 13;
    }

    required CommandType commandType = 1;
    optional float x = 2;
    optional float y = 3;
}

message Video {

    message Rectangle {
        required int32 x = 1;
        required int32 y = 2;
        required int32 width = 3;
        required int32 height = 4;
        optional bytes image = 5;
    }

    message Point {
        required int32 x = 1;
        required int32 y = 2;
    }

    message MoveRectangle {
        required Rectangle destinationRectangle = 1;
        required Point sourcePoint = 2;
    }

    repeated Rectangle dirtyRects = 1;
    repeated MoveRectangle moveRects = 2;
    optional bytes frame = 3;
}

message Audio {
    optional bytes sound = 1;
}

message DeviceInfo {
    optional bytes deviceName = 1;
    optional Resolution resolution = 2;
}

message Resolution {
    optional int32 width = 1;
    optional int32 height = 2;
}

message FileRequest {
    enum FileRequestType {
        OpenFileRemotely = 1;
        DeleteFile = 2;
        SaveFile = 3;
        SendFile = 4;
    }
    required FileRequestType fileRequestType = 1;
    required bytes filePath = 2;
}

message FileInfo
{
    required bytes filePath = 1;
    required uint64 fileSize = 2;
    optional bytes fileIcon = 3;
}

message FileBlock {
    required bytes content = 1;
}

message CloudStorageTokenRequest{
    optional int32 expires = 1[default = 3600];
}

message CloudStorageToken{
    required bytes token = 1;
}

message SharedMessage {
    required bytes content = 1;
}

message KeyboardEvent {
    required int32 keyCode = 1;
}
